v0.10.0/_sources/generated/statsmodels.genmod.families.family.InverseGaussian.rst.txt
statsmodels.genmod.families.family.InverseGaussian
==================================================

.. currentmodule:: statsmodels.genmod.families.family

.. autoclass:: InverseGaussian

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         InverseGaussian.deviance
         InverseGaussian.fitted
         InverseGaussian.loglike
         InverseGaussian.loglike_obs
         InverseGaussian.predict
         InverseGaussian.resid_anscombe
         InverseGaussian.resid_dev
         InverseGaussian.starting_mu
         InverseGaussian.weights



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         InverseGaussian.link
         InverseGaussian.links
         InverseGaussian.safe_links
         InverseGaussian.valid
         InverseGaussian.variance

