v0.14.4/_sources/generated/statsmodels.genmod.families.family.InverseGaussian.rst.txt
statsmodels.genmod.families.family.InverseGaussian
==================================================

.. currentmodule:: statsmodels.genmod.families.family

.. autoclass:: InverseGaussian
   :exclude-members: deviance,fitted,get_distribution,loglike,loglike_obs,predict,resid_anscombe,resid_dev,starting_mu,weights,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~InverseGaussian.deviance
      ~InverseGaussian.fitted
      ~InverseGaussian.get_distribution
      ~InverseGaussian.loglike
      ~InverseGaussian.loglike_obs
      ~InverseGaussian.predict
      ~InverseGaussian.resid_anscombe
      ~InverseGaussian.resid_dev
      ~InverseGaussian.starting_mu
      ~InverseGaussian.weights
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~InverseGaussian.link
      ~InverseGaussian.links
      ~InverseGaussian.safe_links
      ~InverseGaussian.valid
      ~InverseGaussian.variance
   
   
   